src/objects/Life_Events_Checklist__c.object
<CustomObject>
    <description>Assessment for CHOICES. 
LEC Blake, Weathers, Nagy, Kaloupek, Charney, &amp; Keane, 1995</description>
    <fields>
        <fullName>AssessmentId__c</fullName>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Life Events Checklists</relationshipLabel>
        <relationshipName>Life_Events_Checklists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Life_Events_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mark form complete</description>
        <label>Is complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEC_Q01__c</fullName>
        <inlineHelpText>Natural disaster (for example, flood, hurricane, tornado, earthquake)</inlineHelpText>
        <label>LEC_Q01</label>
        <picklist>
            <picklistValues>
                <fullName>Happened to me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t apply</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEC_Q02__c</fullName>
        <inlineHelpText>Fire or explosion</inlineHelpText>
        <label>LEC_Q02</label>
        <picklist>
            <picklistValues>
                <fullName>Happened to me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t apply</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LEC_Q03__c</fullName>
        <inlineHelpText>Transportation accident (for example, car accident, boat accident, train wreck, plane crash)</inlineHelpText>
        <label>LEC_Q03</label>
        <picklist>
            <picklistValues>
                <fullName>Happened to me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witnessed it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learned about it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doesn’t apply</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Life_Events_Checklist_Notes__c</fullName>
        <description>After completing the LEC, conversations tend to go in depth as partiicipants describe their experiences/provide detail about events that happened to them/were witnessed by them/were heard of by them. Case Coordinators take notes, and have requested this area to enter them into SF attached to the LEC.</description>
        <label>Life Events Checklist Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OldId__c</fullName>
        <externalId>true</externalId>
        <label>Old ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Life Events Checklists</relationshipLabel>
        <relationshipName>Life_Events_Checklists</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Life Events Checklist</label>
    <nameField>
        <displayFormat>LEC-{0000}</displayFormat>
        <label>LEC RecNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Life Events Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>